--- a/public/css/split.css
+++ b/public/css/split.css
@@ -15,6 +15,7 @@ body {
     "unten";
     color: #bebebe;
     font-size: 120%;
+    background-color: #292929;
 }
 
 body:hover #Boben {
